<resources>
    <string name="ContaBancaria">ContaBancaria</string>
    <string name="rbCPoupanca">Conta Poupança</string>
    <string name="rbCEspecial">Conta Especial</string>
    <string name="tvCriar">Criar conta</string>
    <string name="tvVisualizar">Acessar dados</string>
    <string name="tvDepositar">Depositar valor</string>
    <string name="tvSacar">Sacar valor</string>
    <string name="etNome">Nome</string>
    <string name="etVInicial">Valor Inicial</string>
    <string name="etValor">R$ 00,00</string>
    <string name="btnSalvar">Valor Inicial</string>
    <string name="btnSacar">Sacar</string>
    <string name="btnDepositar">Depositar</string>
</resources>